# edgePython

./: .gitignore  README.md  pyproject.toml
MCP/: edgepython_server.py
code_for_paper/: figure1.py  figure2.py  figure3.py
docs/: api.yaml
edgepython/: __init__.py  classes.py  compressed_matrix.py  dgelist.py  dispersion.py  dispersion_lowlevel.py  exact_test.py  expression.py  filtering.py  gene_sets.py  glm_fit.py  glm_levenberg.py  glm_test.py  io.py  limma_port.py  normalization.py  ql_weights.py  results.py  sc_fit.py  smoothing.py  splicing.py  utils.py  visualization.py  voom_lmfit.py  weighted_lowess.py
examples/clytia/: clytia_tutorial.ipynb
examples/hoxa1/: hoxa1_R_vs_Python.ipynb  hoxa1_tutorial.ipynb
examples/mammary/: mouse_mammary_R_vs_Python.ipynb  mouse_mammary_tutorial.ipynb
tests/: __init__.py  conftest.py  test_bismark.py  test_classes.py  test_dgelist.py  test_dispersion.py  test_exact_test.py  test_expression.py  test_gene_sets.py  test_glm.py  test_io.py  test_r_vs_py.py  test_sc_eb_sim.py  test_sc_fit.py  test_splicing.py  test_treat.py  test_utilities.py  test_visualization.py  test_voom_lmfit.py  test_voom_r_parity.py
tests/data/: Py_bismark_counts.csv  Py_bismark_genes.csv  Py_camera_cor0.csv  Py_camera_cor05.csv  Py_camera_default.csv  Py_camera_logcpm.csv  Py_camera_ranks.csv  Py_camera_unsorted.csv  Py_design_meth.csv  Py_design_meth_noint.csv  Py_dgelist_basic.csv  Py_dgelist_colsums.csv  Py_dgelist_counts_head.csv  Py_dgelist_custom_lib.csv  Py_dgelist_disp_summary.csv  Py_dgelist_filter.csv  Py_dgelist_filter_head.csv  Py_dgelist_filtered.csv  Py_dgelist_genes_head.csv  Py_dgelist_normed.csv  Py_dgelist_removezeros.csv  Py_fry.csv  Py_mroast.csv  Py_nearest_ref.csv  Py_nearest_tss.csv  Py_norm_RLE.csv  Py_norm_TMM.csv  Py_norm_TMM_customlib.csv  Py_norm_UQ.csv  (+80 more)
(+46 files in other folders)
