[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgepython"
version = "0.2.2"
description = "Python port of the edgeR Bioconductor package for differential expression analysis of digital gene expression data."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Lior Pachter"},
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "statsmodels>=0.13",
    "numba>=0.57",
]

[project.optional-dependencies]
h5 = ["h5py>=3.0"]
anndata = ["anndata>=0.7"]
parquet = ["pyarrow>=8.0"]
formula = ["patsy>=0.5"]
all = ["h5py>=3.0", "anndata>=0.7", "pyarrow>=8.0", "patsy>=0.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["edgepython*"]
